@@ -3,6 +3,8 @@ vX.Y
 - Add Docker files and scripts to test building and evaluate a 1
   warehouse PostgreSQL database.
 - Update for CMake policy CMP0037.
+- Replace obsolete bzero with memset
+- Relace obsolete gethostbyname and gethostbyaddr with getaddrinfo
 
 v0.41
 
